# DNS-Tools

./: .gitignore  README.docker.md  docker-compose.yml  pyproject.toml  run_seed.py
apps/api/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
apps/api/core/: __init__.py  db.py  odm.py
apps/api/dns/: documents.py  models.py  repository.py  router.py  schemas.py  services.py
apps/api/utils/: seed.py
apps/cron/: .env.example  add_new_servers.py  dns_fetcher.py  location_convergency.py  ping_and_update_reliability.py  pyproject.toml
apps/cron/helper/: __init__.py  location.py  location_helper.py
apps/cron/utils/: __init__.py  cache.py  db.py
apps/web/: package.json  pnpm-lock.yaml  schema.json
apps/web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  site.webmanifest
apps/web/src/app/_components/: world-map.tsx
apps/web/src/components/: footer.tsx  header.tsx
apps/web/src/lib/: react-query-client.ts  utils.ts
apps/web/src/lib/api/: api-types.d.ts  client.ts  dns.ts
apps/web/src/lib/hooks/dns/: useDnsServers.ts
apps/web/src/providers/: react-query-provider.tsx
libs/models/: .gitignore  README.md  pyproject.toml
libs/models/dns_models/: __init__.py  models.py
libs/models/dns_models/models/: __init__.py  dns_server_models.py  location_models.py
