[project]
name = "dns-api"
version = "0.1.0"
requires-python = "~=3.14.3"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "beanie",
    "pymongo",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sentry-sdk",
    "httpx",
]

[tool.uv.sources]
dns-models = { workspace = true } 
